Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 Unity_FirstGame/UserSettings/Layouts/default-2021.dwlt
+Unity_FirstGame/UserSettings/Layouts/default-2021.dwlt
