--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ crashlytics-build.properties
 Unity_FirstGame/UserSettings/Layouts/default-2021.dwlt
 Unity_FirstGame/UserSettings/Layouts/default-2021.dwlt
 Unity_FirstGame/UserSettings/Layouts/default-2021.dwlt
+Unity_FirstGame/UserSettings/Layouts/default-2021.dwlt
