Added location prefabs and terrain without landscape

--- a/Unity_FirstGame/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/Unity_FirstGame/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -226,7 +226,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":1.899993896484375,\"y\":3.5,\"z\":-5.90000057220459}}"
+                "value": "{\"m_Value\":{\"x\":1.95001220703125,\"y\":1.0900001525878907,\"z\":-2.010009765625}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
