--- a/Unity_FirstGame/Packages/manifest.json
+++ b/Unity_FirstGame/Packages/manifest.json
@@ -8,9 +8,12 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.0.6",
+    "com.unity.render-pipelines.high-definition": "12.1.10",
     "com.unity.render-pipelines.universal": "12.1.10",
+    "com.unity.shadergraph": "12.1.10",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.ai": "1.0.0",
